syntax = "proto3";

package api.user.v1;

import "google/api/annotations.proto";

option go_package = "food-server/api/user/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.v1";

service User {
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
	rpc GetUser (GetUserRequest) returns (GetUserReply);
	rpc ListUser (ListUserRequest) returns (ListUserReply);
	rpc LoginByUsername (LoginByUsernameRequest) returns (LoginByUsernameReply) {
		option (google.api.http) = {
			post: "/v1/user/login/byUsername",
			body: "*"
		};
	};
}

message CreateUserRequest {}
message CreateUserReply {}

message UpdateUserRequest {}
message UpdateUserReply {}

message DeleteUserRequest {}
message DeleteUserReply {}

message GetUserRequest {}
message GetUserReply {}

message ListUserRequest {}
message ListUserReply {}


message userInfo {
	int64 id = 1;
	string username = 2;
	string password = 3;
	string token = 4;
}

message LoginByUsernameRequest {
	string username = 1;
	string password = 2;
}

message LoginByUsernameReply {
	userInfo userInfo = 1;
}